src/objects/WebserviceConfigurations__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AuthTokenPlatformCacheKey__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Auth Token Platform Cache Key</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AuthorizationToken__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Authorization Token</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CheckDuplicate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>CheckDuplicate</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Client_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Client ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Secret__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Client Secret</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>E100__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>E100</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>E400__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>E400</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>E401__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>E401</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndpointPath__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Endpoint Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GrantType__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Grant Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Handle_Unauthorized__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Handle Unauthorized</description>
        <label>Handle Unauthorized Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Mutual_Authentication__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Added for Certification(Mutual Authentication)</description>
        <label>Has Mutual Authentication</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Headers__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Headers</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IsCachedToken__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Cached Token</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_JWT_Token__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used when token generated is JWT Token</description>
        <label>Is JWT Token</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JSONBodyWithMergeFields__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>JSON Body With Merge Fields</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Method__c</fullName>
        <label>Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>GET</fullName>
                </value>
                <value>
                    <fullName>POST</fullName>
                </value>
                <value>
                    <fullName>PUT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProfileOrgMappings__c</fullName>
        <description>Provide Profile-Org mapping in JSON format</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Profile Org Mappings</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RecordTypeText__c</fullName>
        <description>Source of truth for Record Type to be applied to the record. This field is a migratable version of Record Type that is used by ACET_WebserviceConfigTrigger to update the actual records&apos; Record Type based on the value of this field.</description>
        <inlineHelpText>Source of truth for Record Type to be applied to the record. This field is a migratable version of Record Type that is used by ACET_WebserviceConfigTrigger to update the actual records&apos; Record Type based on the value of this field.</inlineHelpText>
        <label>RecordTypeText</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Service_API</fullName>
                </value>
                <value>
                    <fullName>Token_API</fullName>
                </value>
                <value>
                    <fullName>Authorization_Token</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RetryStatusCodes__c</fullName>
        <description>Enter the status code to retry, if the callout fails with entered status code. Enter multiple status codes separated with comma</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the status code to retry, if the callout fails with entered status code. Enter multiple status codes separated with comma</inlineHelpText>
        <label>Retry Status Codes</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Timeout__c</fullName>
        <label>Timeout</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TokenAPI__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Token API</label>
        <referenceTo>WebserviceConfigurations__c</referenceTo>
        <relationshipLabel>Webservice Configurations</relationshipLabel>
        <relationshipName>WebserviceConfigurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Webservice Configurations</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>matt_all</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>RecordTypeText__c</columns>
        <columns>AuthorizationToken__c</columns>
        <filterScope>Everything</filterScope>
        <label>matt all with Record Type</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Webservice Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Webservice Configurations</pluralLabel>
    <recordTypes>
        <fullName>Authorization_Token</fullName>
        <active>true</active>
        <label>Authorization Token</label>
    </recordTypes>
    <recordTypes>
        <fullName>Service_API</fullName>
        <active>true</active>
        <label>Service API</label>
    </recordTypes>
    <recordTypes>
        <fullName>Token_API</fullName>
        <active>true</active>
        <label>Token API</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>